--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
   "bugs": {
     "url": "https://github.com/jbgf/component/issues"
   },
-  "homepage": "https://github.com/jbgf/component#readme"
+  "homepage": "https://github.com/jbgf/component#readme",
+  "devDependencies": {
+    "gulp-changed": "^1.3.2"
+  }
 }
