--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/jbgf/component#readme",
   "devDependencies": {
-    "gulp-changed": "^1.3.2"
+    "gulp-changed": "^1.3.2",
+    "gulp-sass": "^3.1.0"
   }
 }
