--- a/package.json
+++ b/package.json
@@ -17,6 +17,13 @@
   },
   "homepage": "https://github.com/jbgf/component#readme",
   "devDependencies": {
-    "gulp-changed": "^1.3.2"
+    "browser-sync": "^2.18.8",
+    "gulp": "^3.9.1",
+    "gulp-changed": "^1.3.2",
+    "gulp-connect-php": "^0.0.8",
+    "gulp-if": "^2.0.2",
+    "gulp-sass": "^3.1.0",
+    "gulp-uglify": "^2.1.0",
+    "run-sequence": "^1.2.2"
   }
 }
