--- a/package.json
+++ b/package.json
@@ -17,15 +17,18 @@
   },
   "homepage": "https://github.com/jbgf/component#readme",
   "devDependencies": {
-
     "browser-sync": "^2.18.8",
     "gulp": "^3.9.1",
     "gulp-changed": "^1.3.2",
     "gulp-connect-php": "^0.0.8",
+    "gulp-csso": "^3.0.0",
     "gulp-if": "^2.0.2",
+    "gulp-imagemin": "^3.3.0",
     "gulp-sass": "^3.1.0",
     "gulp-uglify": "^2.1.0",
-    "run-sequence": "^1.2.2"
-
+    "gulp.spritesmith": "^4.1.1",
+    "merge-stream": "^1.0.1",
+    "run-sequence": "^1.2.2",
+    "vinyl-buffer": "^1.0.0"
   }
 }
