--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/jbgf/component#readme",
   "devDependencies": {
     "browser-sync": "^2.18.8",
+    "express": "^4.15.3",
     "gulp": "^3.9.1",
     "gulp-changed": "^1.3.2",
     "gulp-connect-php": "^0.0.8",
