--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
   "homepage": "https://github.com/jbgf/component#readme",
   "devDependencies": {
     "browser-sync": "^2.18.8",
+    "connect-flash": "^0.1.1",
+    "consolidate": "^0.14.5",
     "express": "^4.15.3",
     "gulp": "^3.9.1",
     "gulp-changed": "^1.3.2",
@@ -25,7 +27,9 @@
     "gulp-csso": "^3.0.0",
     "gulp-if": "^2.0.2",
     "gulp-imagemin": "^3.3.0",
+    "gulp-nodemon": "^2.2.1",
     "gulp-sass": "^3.1.0",
+    "gulp-sourcemaps": "^2.6.0",
     "gulp-uglify": "^2.1.0",
     "gulp.spritesmith": "^4.1.1",
     "merge-stream": "^1.0.1",
